--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,6 +7,7 @@ body {
     height: 100%;
     position: relative;
     overflow-x: hidden;
+    word-wrap: break-word;
 }
 
 button,.btn{
